--- a/api/.env
+++ b/api/.env
@@ -3,3 +3,4 @@ DB_PASSWORD=postgres
 DB_HOST=localhost
 API_KEY= caba41f8a4484c46b8c0f0628a1fac6f
 API_KEYS= 0447847a3ac24d9699a8b9ed47a77829
+PORT = 3001
